[package]
name = "tokio-watch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "simple"

[[example]]
name = "auth"


[dev-dependencies]
tokio = {version = "1", features = ["fs", "rt-multi-thread", "io-util", "macros", "signal", "time"]}
reqwest = {version = "0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }

[dependencies]
tokio = {version = "1", features = ["fs"]}
notify = "5.0.0-pre.15"